# IntroNN

./: .gitignore  README.md  pyproject.toml
intronn/: __init__.py  __main__.py
intronn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_intronn.py
