[tool.poetry]
name = "IntroNN"
version = "0.1.0"
description = ""
authors = ["Weilun Tong <weiluntong.inbox@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
start = "intronn:main"
