[tool.poetry]
name = "IntroNN"
version = "0.1.0"
description = ""
authors = ["Weilun Tong <weiluntong.inbox@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = {url = "https://download.pytorch.org/whl/cu101/torch-1.4.0-cp37-cp37m-linux_x86_64.whl", platform = "linux"}
numpy = "^1.18.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
start = "intronn:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

